<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/ownerLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ownerImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownerLogin" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/ownerImage"
        app:layout_constraintTop_toBottomOf="@id/ownerImage" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/nameLabel"
        app:layout_constraintLeft_toRightOf="@id/nameLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameLabel" />

    <TextView
        android:id="@+id/companyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/company"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/ownerImage"
        app:layout_constraintTop_toBottomOf="@id/nameLabel" />

    <TextView
        android:id="@+id/company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/companyLabel"
        app:layout_constraintLeft_toRightOf="@id/companyLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/companyLabel" />

    <TextView
        android:id="@+id/blogLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/blog"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/ownerImage"
        app:layout_constraintTop_toBottomOf="@id/companyLabel" />

    <TextView
        android:id="@+id/blog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/blogLabel"
        app:layout_constraintLeft_toRightOf="@id/blogLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/blogLabel" />

    <TextView
        android:id="@+id/followersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/followers"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/ownerImage"
        app:layout_constraintTop_toBottomOf="@id/blogLabel" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/followersLabel"
        app:layout_constraintLeft_toRightOf="@id/followersLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/followersLabel" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/ownerImage"
        app:layout_constraintTop_toBottomOf="@id/followersLabel" />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/locationLabel"
        app:layout_constraintLeft_toRightOf="@id/locationLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/locationLabel" />

    <Button
        android:id="@+id/openWebBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_in_browser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location" />

</androidx.constraintlayout.widget.ConstraintLayout>